<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ScrollView
            android:id="@+id/new_review_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/new_review_parent_lo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/resty_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/resty_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rest_name" />

                    <EditText
                        android:id="@+id/resty_name_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                         />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sandie_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/chicky_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sandwich" />

                    <EditText
                        android:id="@+id/chicky_name_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <TextView
                    android:id="@+id/chick_section_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chick_rating_header"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:id="@+id/crunch_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/crunch_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chick_crunch" />

                    <RatingBar
                        android:id="@+id/chick_crunch_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chick_juice_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/juicy_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chick_juiciness" />

                    <RatingBar
                        android:id="@+id/chick_juice_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chick_taste_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/szn_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chick_szn" />

                    <RatingBar
                        android:id="@+id/chick_taste_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <TextView
                    android:id="@+id/sauce_rating_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce_rating_header"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:id="@+id/spicy_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/sauce_spice_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sauce_spice" />

                    <RatingBar
                        android:id="@+id/sauce_spice_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:numStars="5"
                        android:stepSize=".5"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sauce_taste_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/sauce_taste_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sauce_taste" />

                    <RatingBar
                        android:id="@+id/sauce_taste_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sauce_amount_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/sauce_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amount" />

                    <RatingBar
                        android:id="@+id/sauce_amount_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <TextView
                    android:id="@+id/bun_rating_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bun_rating_header"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:id="@+id/bun_text_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/bun_text_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bun_text" />

                    <RatingBar
                        android:id="@+id/bun_text_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bun_taste_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/bun_taste_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sauce_taste" />

                    <RatingBar
                        android:id="@+id/bun_taste_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize=".5"
                        android:numStars="5" />
                </LinearLayout>

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description" />

                <EditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="20dp"

                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:id="@+id/buttons_lo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight=".5"
                        android:text="cancel"
                        android:layout_margin="10dp"/>

                    <Button
                        android:id="@+id/review_done_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="Finish"
                        android:layout_weight=".5"
                        android:layout_margin="10dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>